src/scss/components/header.scss
@import '../variables';

.header-wrapper {
	height: $headerHeight;
	position: relative;
	z-index: 2;

	@media(min-width: $breakPointLarge) {
		height: $headerHeightLargeBreakPoint;
	}
}

.header {
	background-color: $brandingColor;
	color: $secondaryColor;
	box-sizing: border-box;
	height: $headerHeight;
	padding: 115px 16px 72px;
	transition: height 1s ease, top 1s ease;
	width: 100%;
	z-index: 2;

	@media(min-width: $breakPointMedium) {
		padding-top: 135px;
	}

	@media(min-width: $breakPointLarge) {
		height: $headerHeightLargeBreakPoint;
		padding-top: 165px;
	}
}

.header--fixed {
	position: fixed;
	top: - ($headerHeight - $fixedHeaderHeight);

	@media(min-width: $breakPointLarge) {
		top: - ($headerHeightLargeBreakPoint - $fixedHeaderHeight);
	}
}

.header--expanded {
	top: 0
}

// ********** Navigation ********** //

.menu-button {
	color: $secondaryColor;
	cursor: pointer;
	display: block;
	position: absolute;
	left: 30px;
	top: 18px;
	z-index: 5;

	width: 27px;
	height: 18px;
	transform: rotate(0deg);
	transition: .5s ease-in-out;

	span {
		display: block;
		position: absolute;
		height: 3px;
		width: 100%;
		background: $secondaryColor;
		opacity: 1;
		left: 0;
		transform: rotate(0deg);
		transition: .25s ease-in-out;

		&:nth-child(1) {
			top: 0;
		}

		&:nth-child(2),
		&:nth-child(3) {
			top: 8px;
		}

		&:nth-child(4) {
			top: 16px;
		}
	}

	.header--expanded & {
		span {
			&:nth-child(1),
			&:nth-child(4) {
				top: 8px;
				width: 0%;
				left: 50%;
			}

			&:nth-child(2) {
				transform: rotate(45deg);
			}

			&:nth-child(3) {
				transform: rotate(-45deg);
			}

		}
	}

	.header--fixed & {
		position: fixed;
	}

	@media (min-width: $breakPointLarge) {
		display: none;
	}
}

.header__home-link {
	cursor: pointer;
	font-family: 'Caviar Dreams', sans-serif;
	font-size: 20px;
	letter-spacing: 2px;
	left: 0;
	line-height: 24px;
	display: none;
	position: fixed;
	text-align: center;
	top: 15px;
	width: 100%;
	z-index: 4;

	a {
		cursor: pointer;
	}

	.header--fixed &,
	.header--expanded & {
		display: block;
	}

	@media (min-width: $breakPointLarge) {
		left: 30px;
		width: auto;
	}
}

.header__navigation {
	position: fixed;
	left: 0;
	display: none;
	text-align: center;
	top: 150px;
	width: 100%;
	z-index: 3;

	.header--expanded & {
		display: block;
		top: 150px;
	}

	@media(min-width: $breakPointLarge) {
		display: block;
		position: absolute;
		top: 20px;

		.header--fixed & {
			bottom: 20px;
			text-align: right;
			top: auto;
		}
	}
}

.header__navigation-list {
	list-style: none;
	margin: 0;
	padding: 0;

	@media(min-width: $breakPointLarge) {
		display: flex;
		flex-direction: row;
		flex-wrap: nowrap;
		justify-content: center;

		.header--fixed & {
			justify-content: flex-end;
		}
	}
}

.header__navigation-list__list-item {
	display: block;
	padding: 15px;
	text-transform: uppercase;

	@media(min-width: $breakPointLarge) {
		display: inline;
		padding: 0 30px;
	}

	a {
		cursor: pointer;
		position: relative;

		&:hover,
		&.active {
			&:after {
				content: '•';
				display: block;
				left: 0;
				position: absolute;
				top: 14px;
				text-align: center;
				width: 100%;
			}
		}
	}
}

.header__hero {
	text-align: center;

	.header--fixed &,
	.header--expanded & {
		display: none;
	}
}

.header__hero__title,
.header__hero__sub-title {
	font-family: 'Caviar Dreams', sans-serif;
}

.header__hero__title {
	font-size: 40px;
	font-weight: bold;
	letter-spacing: 7px;
	line-height: 60px;
	margin: 0 0 42px;

	@media (min-width: $breakPointMedium) {
		font-size: 48px;
		letter-spacing: 9px;
	}

	@media (min-width: $breakPointLarge) {
		font-size: 64px;
		letter-spacing: 12px;
		line-height: 81px;
	}
}

.header__hero__sub-title {
	font-size: 18px;
	font-weight: normal;
	letter-spacing: 7px;
	line-height: 30px;
	margin: 0 0 72px;

	@media (min-width: $breakPointMedium) {
		letter-spacing: 15px;
	}

	@media (min-width: $breakPointLarge) {
		font-size: 24px;
		letter-spacing: 20px;
		line-height: 27px;
		margin: 0 0 96px;
	}
}

.see-more-icon {
	display: block;
	fill: $secondaryColor;
	height: 24px;
	margin: 60px auto 0;
	width: 24px;
}

